--- a/packages/core/src/components/content/content.scss
+++ b/packages/core/src/components/content/content.scss
@@ -24,6 +24,7 @@
     flex-grow: 1;
     overflow: auto;
     padding-right: 1.5rem;
+    position: relative;
   }
 
   .content-header.slotted {
